retoques por LUISA

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<section id="banner" data-video="images/banner">
 				<div class="inner">
 					<h1>Metropoilita</h1>
-					<p>Acompañanos en este viaje por los rincones de metrópolis que seguro que no conocias.<br />
+					<p>Acompañanos en este viaje por los rincones de <b>metrópolis</b> que seguro que no conocias.<br />
 					<a href="#one" class="button special scrolly">Sí, quiero</a>
 				</div>
 			</section>
@@ -69,9 +69,9 @@
 					<div id="flexgrid">
 						<div>
 							<header>
-								<h3>Tempus Feugiat</h3>
+								<h3>ANTANANARIVO</h3>
 							</header>
-							<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu</p>
+							<p>El oalacio barroco de color rosa de Andafiavaratra se encuentra en el centro del barrio Haute Ville. En el centro de la ciudad, el lago Anosy, que tiene forma de corazón, está rideadi de jacarandas</p>
 							<ul class="actions">
 								<li><a href="#" class="button alt">Learn More</a></li>
 							</ul>
